--- a/languages/ruby/self.org
+++ b/languages/ruby/self.org
@@ -1,4 +1,4 @@
-#+TITLE: Ruby's reference
+#+TITLE: Ruby
 #+DATE: <2024-06-11 mar>
 
 |------+-----------------------------------------------------------|
