--- a/languages/sh/bc.org
+++ b/languages/sh/bc.org
@@ -1,4 +1,4 @@
-#+TITLE: bc's reference
+#+TITLE: bc
 #+DATE: <2024-04-12 vie>
 
 |------------+--------------------------------------------------------------------|
