--- a/languages/ml/ocaml/ocaml.org
+++ b/languages/ml/ocaml/ocaml.org
@@ -1,4 +1,4 @@
-#+TITLE: OCaml's reference
+#+TITLE: OCaml
 #+DATE: <2020-11-24 mar>
 
 |-------------+------------------------------------------------------------------|
