--- a/languages/python/python.org
+++ b/languages/python/python.org
@@ -1,4 +1,4 @@
-#+TITLE: Python's reference
+#+TITLE: Python
 #+DATE: <2020-11-02 lun>
 
 |------+-------------------------------------------------------------|
