--- a/languages/sh/awk/awk.org
+++ b/languages/sh/awk/awk.org
@@ -1,4 +1,4 @@
-#+TITLE: AWK's reference
+#+TITLE: AWK
 #+DATE: <2023-09-04 lun>
 
 |-----------+---------------------------------------------------------------|
