--- a/languages/sh/jq/jq.org
+++ b/languages/sh/jq/jq.org
@@ -1,4 +1,4 @@
-#+TITLE: JQ's reference
+#+TITLE: JQ
 #+DATE: <2023-11-27 lun>
 
 |--------------+---------------------------------------------------------|
