--- a/languages/ml/elm/elm.org
+++ b/languages/ml/elm/elm.org
@@ -1,4 +1,6 @@
-- keyboard https://github.com/elm/browser/blob/1.0.0/notes/keyboard.md
+#+TITLE: Elm
+#+DATE: <2023-04-09 dom>
+
 - https://en.wikipedia.org/wiki/Elm_(programming_language)
   - no higher kind polymorphism
     - no generic map, there is List.map and Set.map
@@ -11,17 +13,7 @@
     https://www.roc-lang.org/tutorial
   - (fork) https://gren-lang.org/
 
-- https://github.com/sporto/awesome-elm
-- https://github.com/rofrol/awesome-elm-gamedev
-
-- identation https://elmprogramming.com/indentation.html
-- each file in Elm is a *module* and MUST a module statement
-- Style https://elm-lang.org/docs/style-guide
-  - naming
-    - modules   CamelCase
-    - functions camelCase
-    - variables camelCase
-
+- each file in Elm is a *module* and MUST have a module statement
 
 * language
 
@@ -38,6 +30,10 @@
 
 ** style
 
+- https://elm-lang.org/docs/style-guide
+- https://elmprogramming.com/indentation.html
+- ModuleName
+- variableName
 - functionName
 - fieldName
 - Type
@@ -46,14 +42,14 @@
 ** model/view/update
 
 #+begin_src
-  subscription -(Msg)-> update --(Model)-> view
-         ^              ^    ¦              ¦
-         ¦              ¦    ¦              ¦
-      (Model)        (Msg)  (Cmd Msg)   (Html Msg)
-         ¦              ¦    ¦              ¦
-         ¦              ¦    v              v
-  ============================================
-                    RUNTIME
+subscription--(Msg)-> update --(Model)--> view
+      ^                ^  ¦                ¦
+      ¦                ¦  ¦                ¦
+   (Model)          (Msg)(Cmd Msg)     (Html Msg)
+      ¦                ¦  ¦                ¦
+      ¦                ¦  v                v
+=============================================
+                  RUNTIME
 #+end_src
 
 *** Browser
@@ -113,123 +109,95 @@ onUrlChange   : Url -> msg -- when the Url changes, msg goes to update
   import SeasonMod     exposing (Season)     -- qualified, imports Season
 #+end_src
 
-** functions https://package.elm-lang.org/packages/elm/core/latest/
+** stdlib / functions
+https://package.elm-lang.org/packages/elm/core/latest/
+|--------------+-------------------------------|
+| [[https://package.elm-lang.org/packages/elm/core/latest/Array][Array]]        | indexedMap toIndexedList      |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Basics][Basics]]       | "imported by default"         |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Bitwise][Bitwise]]      | complement shiftLeftBy        |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Char][Char]]         | toCode fromCode               |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Debug][Debug]]        | toString log todo             |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Dict][Dict]]         | merge union intersect diff    |
+| [[https://package.elm-lang.org/packages/elm/core/latest/List][List]]         | intersperse partition unzip   |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Maybe][Maybe]]        |                               |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Platform][Platform]]     | Program Task ProcessId Router |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Platform-Cmd][Platform.Cmd]] |                               |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Platform-Sub][Platform.Sub]] | batch                         |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Process][Process]]      |                               |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Result][Result]]       |                               |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Set][Set]]          |                               |
+| [[https://package.elm-lang.org/packages/elm/core/latest/String][String]]       |                               |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Task][Task]]         |                               |
+| [[https://package.elm-lang.org/packages/elm/core/latest/Tuple][Tuple]]        |                               |
+|--------------+-------------------------------|
+https://github.com/orgs/elm/repositories?q=mirror%3Afalse+fork%3Afalse+archived%3Afalse+language%3Aelm+sort%3Aname-asc
+|------------------------+-----------------------------------|
+| [[https://package.elm-lang.org/packages/elm/browser/latest/][browser]] [[https://github.com/elm/browser/blob/1.0.0/notes/keyboard.md][1]]              | Browser.Navigation.{load,pushUrl} |
+| [[https://package.elm-lang.org/packages/elm/bytes/latest/][bytes]]                  |                                   |
+| [[https://package.elm-lang.org/packages/elm/color/latest/][color]]                  |                                   |
+| [[https://package.elm-lang.org/packages/elm/file/latest/][file]]                   |                                   |
+| [[https://package.elm-lang.org/packages/elm/html/latest/][html]]                   |                                   |
+| [[https://package.elm-lang.org/packages/elm/http/latest/][http]]                   |                                   |
+| [[https://package.elm-lang.org/packages/elm/json/latest/][json]]                   |                                   |
+| [[https://package.elm-lang.org/packages/elm/parser/latest/][parser]]                 |                                   |
+| [[https://package.elm-lang.org/packages/elm/project-metadata-utils/latest/][project-metadata-utils]] |                                   |
+| [[https://package.elm-lang.org/packages/elm/random/latest/][random]]                 |                                   |
+| [[https://package.elm-lang.org/packages/elm/regex/latest/][regex]]                  |                                   |
+| [[https://package.elm-lang.org/packages/elm/svg/latest/][svg]]                    |                                   |
+| [[https://package.elm-lang.org/packages/elm/time/latest/][time]]                   | Time.Posix                        |
+| [[https://package.elm-lang.org/packages/elm/virtual-dom/latest/][virtual-dom]]            |                                   |
+| [[https://package.elm-lang.org/packages/elm/url/latest/][url]]                    |                                   |
+|------------------------+-----------------------------------|
 
-  /home/sendai/.elm/0.19.1/packages/elm/core/1.0.5/src
-   Array.elm
-   Basics.elm
-   Bitwise.elm
-   Char.elm
-   Debug.elm
-   Dict.elm
-   Elm
-   List.elm
-   Maybe.elm
-   Platform
-   Platform.elm
-   Process.elm
-   Result.elm
-   Set.elm
-   String.elm
-   Task.elm
-   Tuple.elm
-
-  /home/sendai/.elm/0.19.1/packages/elm
-   bytes/
-   core/
-   html/
-   json/
-   parser/
-   random/
-   regex/
-   time/
-   virtual-dom/
-
-
--- if decoding succeds, use fn to build the result
-| Json.Decode                |                                                   |
-|----------------------------+---------------------------------------------------|
-| .succeed                   | a -> Decoder a                                    |
-| .required                  | String -> Decoder a -> Decoder b                  |
-| .optional                  | String -> Decoder a -> a -> Decoder b             |
-| .nullable                  | Decoder a -> a -> Maybe a                         |
-| .int                       | Decoder Int                                       |
-| .string                    | Decoder String                                    |
-| .bool                      | Decoder Bool                                      |
-| .Timestamp.iso8601Decoder  |                                                   |
-| .list                      | Decoder a -> Decoder (List a)                     |
-| .field                     | String -> Decoder a -> Decoder a                  |
-| .decodeString              | Decoder a -> String -> a                          |
-| .at                        | List String -> Decoder a -> Decoder a             |
-| .map3                      | (a->b->c->val) -> Decoder a -> Decoder b -> Decoder c -> Decoder val |
-|----------------------------+---------------------------------------------------|
-| List.head                  | List a -> Maybe a                                 |
-| List.reverse               |                                                   |
-| List.singleton             | a -> List a                                       |
-| List.map                   |                                                   |
-| List.member                |                                                   |
-| List.filter                |                                                   |
-|----------------------------+---------------------------------------------------|
-| Maybe                      |                                                   |
-| .withDefault               |                                                   |
-| .map                       |                                                   |
-|----------------------------+---------------------------------------------------|
-| Http                       |                                                   |
-| .get                       | String -> Decoder a -> Request a                  |
-| .getString                 | String -> Request String                          |
-| .send                      | (Result Error a -> msg) -> Request a -> Cmd msg   |
-| .CompletedLoadFeed         | Result Error String                               |
-| .post                      | String -> Body -> Decoder a -> Request a          |
-| .emptyBody                 | Body                                              |
-| .stringBody                | String -> String -> Body                          |
-| .request                   | {method,header,url,body,expect,timeout,withCredentials} -> Request a |
-|----------------------------+---------------------------------------------------|
-| Random                     |                                                   |
-| .generate                  | creates a generator, from the provided description |
-| .initialSeed               | creates a seed from a given integer               |
-| .step                      | produces a new random value and a new seed, from a generator and a seed |
-| .constant                  | generator                                         |
-| .uniform                   | generator, from a list                            |
-| .weighted                  | generator, from a weighted list                   |
-| .map                       | generator, take an fn maps inside the random      |
-| .andThen                   | generator                                         |
-| .int                       | generator                                         |
-| .float                     | generator                                         |
-| .list                      | generator helper, take an N and a generator       |
-| .pair                      | generator helper, takes 2 generatos               |
-| .lazy                      | generator, to create self-referencing generators, helps compiler |
-|----------------------------+---------------------------------------------------|
-| WebSocket                  |                                                   |
-| .listen                    | String -> (String -> msg) -> Sub msg              |
-| .send                      | String -> String -> Cmd msg                       |
-|----------------------------+---------------------------------------------------|
-| Navigation                 |                                                   |
-| .newUrl                    | String -> Cmd msg                                 |
-| .program                   |                                                   |
-| .programWithFlags          |                                                   |
-|----------------------------+---------------------------------------------------|
-| Sub                        |                                                   |
-| .batch                     |                                                   |
-|----------------------------+---------------------------------------------------|
-| Time.Posix                 |                                                   |
-| Debug.todo                 | String -> undefined?                              |
-| Browser.Navigation.load    | loads all new HTMl, drops model                   |
-| Browser.Navigation.pushUrl | changes url, but does NOT load a new HTMl         |
-|----------------------------+---------------------------------------------------|
+|--------------------+-------------------------------------------------------------------------|
+| Http               |                                                                         |
+| .get               | String -> Decoder a -> Request a                                        |
+| .getString         | String -> Request String                                                |
+| .send              | (Result Error a -> msg) -> Request a -> Cmd msg                         |
+| .CompletedLoadFeed | Result Error String                                                     |
+| .post              | String -> Body -> Decoder a -> Request a                                |
+| .emptyBody         | Body                                                                    |
+| .stringBody        | String -> String -> Body                                                |
+| .request           | {method,header,url,body,expect,timeout,withCredentials} -> Request a    |
+|--------------------+-------------------------------------------------------------------------|
+| Random             |                                                                         |
+| .generate          | creates a generator, from the provided description                      |
+| .initialSeed       | creates a seed from a given integer                                     |
+| .step              | produces a new random value and a new seed, from a generator and a seed |
+| .constant          | generator                                                               |
+| .uniform           | generator, from a list                                                  |
+| .weighted          | generator, from a weighted list                                         |
+| .map               | generator, take an fn maps inside the random                            |
+| .andThen           | generator                                                               |
+| .int               | generator                                                               |
+| .float             | generator                                                               |
+| .list              | generator helper, take an N and a generator                             |
+| .pair              | generator helper, takes 2 generatos                                     |
+| .lazy              | generator, to create self-referencing generators, helps compiler        |
+|--------------------+-------------------------------------------------------------------------|
+| WebSocket          |                                                                         |
+| .listen            | String -> (String -> msg) -> Sub msg                                    |
+| .send              | String -> String -> Cmd msg                                             |
+|--------------------+-------------------------------------------------------------------------|
+| Navigation         |                                                                         |
+| .newUrl            | String -> Cmd msg                                                       |
+| .program           |                                                                         |
+| .programWithFlags  |                                                                         |
+|--------------------+-------------------------------------------------------------------------|
 ** operators
+|------+----------------------------------------+------------------------------------------------------------|
 | op   | signature                              | describes...                                               |
 |------+----------------------------------------+------------------------------------------------------------|
-| (¦>) | a -> (a -> b) -> b                     | the _flow of data_, main advantage over nested parentheses |
-| (<¦) | (a -> b) -> a -> b                     | second argument INTO the first                             |
-| (>>) | (b -> c) -> (a -> b) -> (a -> c)       | _function compositions_, indepedent of the data flow       |
-| (<<) | (a -> b) -> (b -> c) -> (a -> c)       |                                                            |
+| (¦>) | a          -> (a -> b)   -> b          | the _flow of data_, main advantage over nested parentheses |
+| (<¦) | (a -> b)   ->    a       -> b          | second argument INTO the first                             |
+| (>>) | (b -> c)   -> (a -> b)   -> (a -> c)   | _function compositions_, indepedent of the data flow       |
+| (<<) | (a -> b)   -> (b -> c)   -> (a -> c)   |                                                            |
 | (++) | appendable -> appendable -> appendable |                                                            |
 |------+----------------------------------------+------------------------------------------------------------|
 ** attributes/events (1st argument)
 
-https://package.elm-lang.org/packages/elm/html/latest/Html-Attributes
-https://package.elm-lang.org/packages/elm/html/latest/Html-Events
-
+- https://package.elm-lang.org/packages/elm/html/latest/Html-Attributes
+- https://package.elm-lang.org/packages/elm/html/latest/Html-Events
 |-----------------------------+---------------------------------------------|
 | Html.Events.on              | String -> Decoder msg -> Html.Attribute msg |
 | Html.Events.onClick         | msg -> Attribute msg                        |
@@ -247,13 +215,13 @@ https://package.elm-lang.org/packages/elm/html/latest/Html-Events
 Cmd a
 Cmd.none
 
-
 #+begin_src elm
   type Maybe a = Just a | Nothing
   type Result a b = Ok a | Err b
   type Never = OneMore Never -- even in the module where is defined, you cannot make one
 #+end_src
-
+|--------+-------+------------+--------------------------------------------------------------------------------------------|
+|    <r> |       |            |                                                                                            |
 |--------+-------+------------+--------------------------------------------------------------------------------------------|
 | String | "foo" | MANIPULATE | revert repeat  replace  append     concat    split, join, words, lines, cons, uncons, (++) |
 |        |       | SUBSTRING  | slice  left    right    dropLeft   dropRight                                               |
@@ -261,28 +229,29 @@ Cmd.none
 |        |       | CONVERT    | toInt  fromInt toFloat  fromFloat  toList    fromList, fromChar                            |
 |        |       | HIGH-ORDER | map    filter  foldl    foldr      any       all                                           |
 |--------+-------+------------+--------------------------------------------------------------------------------------------|
-| Char   | 'i'   | PREDICATE  | isUpper, isLower, isAlpha, isAlphaNum,                                                     |
+|   Char | 'i'   | PREDICATE  | isUpper, isLower, isAlpha, isAlphaNum,                                                     |
 |        |       |            | toUpper, toLower, toLocaleUpper, toLocaleLower                                             |
 |        |       |            | toCode, fromCode                                                                           |
 |--------+-------+------------+--------------------------------------------------------------------------------------------|
-| Int    |       |            | toFloat                                                                                    |
+|    Int |       |            | toFloat                                                                                    |
 |--------+-------+------------+--------------------------------------------------------------------------------------------|
-| Float  |       |            | round, floor, ceiling, truncate                                                            |
+|  Float |       |            | round, floor, ceiling, truncate                                                            |
 |--------+-------+------------+--------------------------------------------------------------------------------------------|
-| Bool   |       |            | &&, ¦¦, not                                                                                |
+|   Bool |       |            | &&, ¦¦, not                                                                                |
 |--------+-------+------------+--------------------------------------------------------------------------------------------|
 
 ** types complex
 
 |------------------+-------------------+-----------+------------------------+----------------------|
-| instantiate      | type              | access    | update                 | destructuring        |
+|              <r> |                   |           |                        |                      |
+|      instantiate | type              | access    | update                 | destructuring        |
 |------------------+-------------------+-----------+------------------------+----------------------|
-| [1,2,3]          | List Int          |           |                        | x :: xs              |
-| (1, "foo")       | ( Int, String )   |           |                        | ( foo, bar )         |
-| Array.fromList   | Array Int         | Array.get | Array.set              |                      |
+|          [1,2,3] | List Int          |           |                        | x :: xs              |
+|       (1, "foo") | ( Int, String )   |           |                        | ( foo, bar )         |
+|   Array.fromList | Array Int         | Array.get | Array.set              |                      |
 |------------------+-------------------+-----------+------------------------+----------------------|
 | { name = "foo" } | { name : String } | rec.name  | { rec ¦ name = "bar" } | { foo, bar }         |
-| { "foo" }        |                   |           |                        | ({ name } as person) |
+|        { "foo" } |                   |           |                        | ({ name } as person) |
 |------------------+-------------------+-----------+------------------------+----------------------|
 
 - =Array=, immutable
@@ -304,26 +273,29 @@ length vector =
     sqrt (vector.x * vector.x + vector.y * vector.y)
     #+end_src
 
-* dependencies
-- downloaded globally at =$HOME=, NOT per project
-- elm.json
-  |--------------------+-------------|
-  | source-directories | ["src"]     |
-  | type               | application |
-  | elm-version        | 0.19.0      |
-  | dependencies       |             |
-  | test-dependencies  |             |
-  |--------------------+-------------|
 
+* elm.json
+
+dependencies are downloaded globally at =$HOME=, NOT per project
+
+|--------------------+-------------|
+| source-directories | ["src"]     |
+| type               | application |
+| elm-version        | 0.19.0      |
+| dependencies       |             |
+| test-dependencies  |             |
+|--------------------+-------------|
 
 * executable
-|-------------------------------+----------------------------------------------------------|
-| init                          |                                                          |
-| install elm/browser           |                                                          |
-| make Main.elm                 | outputs a .html                                 |
-| make Main.elm --output elm.js | compile, point it at entrypoint file optional --optimize |
-| repl                          |                                                          |
-|-------------------------------+----------------------------------------------------------|
+|---------+--------------------------+----------------------------------------------------------|
+|     <r> |                          |                                                          |
+|---------+--------------------------+----------------------------------------------------------|
+|    init |                          |                                                          |
+| install | elm/browser              |                                                          |
+|    make | Main.elm                 | outputs a .html                                          |
+|    make | Main.elm --output elm.js | compile, point it at entrypoint file optional --optimize |
+|    repl |                          |                                                          |
+|---------+--------------------------+----------------------------------------------------------|
 * codebases
 
 - web framework
@@ -370,37 +342,4 @@ Similar to stop propagation
 onClickWithStopPropagation : msg -> Html.Attribute msg
 onClickWithStopPropagation msg =
     stopPropagationOn "click" (JD.map (\m -> ( m, True )) (JD.succeed msg))
-#+end_src
-
-* SEO
-** head.html
-
-https://github.com/MartinSStewart/state-of-elm/blob/master/head.html
-
-#+begin_src html
-<!-- Primary Meta Tags -->
-<title>State of Elm 2023</title>
-<meta name="title" content="State of Elm 2023">
-<meta name="description" content="An Elm community survey">
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://state-of-elm.com/">
-<meta property="og:title" content="State of Elm 2023">
-<meta property="og:description" content="An Elm community survey">
-<meta property="og:image" content="https://state-of-elm.com/favicon.png">
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://state-of-elm.com/">
-<meta property="twitter:title" content="State of Elm 2023">
-<meta property="twitter:description" content="An Elm community survey">
-<meta property="twitter:image" content="https://state-of-elm.com/favicon.png">
-
-<!-- Favicon -->
-<link rel="shortcut icon" href="./favicon.ico">
-
-<meta name="apple-mobile-web-app-title" content="State of Elm 2023">
-<meta name="application-name" content="State of Elm 2023">
-<meta name="theme-color" content="#ffffff">
 #+end_src
